ipc/ipdl/test/ipdl/error/managedNoDtor.ipdl
include protocol managerNoDtor;

protocol managedNoDtor {
    manager managerNoDtor;
    // empty
};
